// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots renders button with icon and title correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#007AFF",
      "borderColor": "transparent",
      "borderRadius": undefined,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    color="#ffffff"
    size={24}
    style={
      {
        "marginRight": 16,
      }
    }
    testID="icon-heart"
  >
    Icon-heart
  </Text>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": undefined,
        "fontWeight": "600",
      }
    }
  >
    Test Button
  </Text>
</View>
`;

exports[`Button Component Snapshots renders disabled button correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#C6C6C8",
      "borderColor": "transparent",
      "borderRadius": undefined,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 0.6,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#C6C6C8",
        "fontSize": undefined,
        "fontWeight": "600",
      }
    }
  >
    Test Button
  </Text>
</View>
`;

exports[`Button Component Snapshots renders ghost button correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "transparent",
      "borderRadius": undefined,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#007AFF",
        "fontSize": undefined,
        "fontWeight": "600",
      }
    }
  >
    Test Button
  </Text>
</View>
`;

exports[`Button Component Snapshots renders icon-only button correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#007AFF",
      "borderColor": "transparent",
      "borderRadius": 20,
      "borderWidth": 0,
      "flexDirection": "column",
      "height": 44,
      "justifyContent": "center",
      "opacity": 1,
      "padding": 8,
      "width": 44,
    }
  }
>
  <Text
    color="#ffffff"
    size={24}
    testID="icon-add"
  >
    Icon-add
  </Text>
</View>
`;

exports[`Button Component Snapshots renders primary button correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#007AFF",
      "borderColor": "transparent",
      "borderRadius": undefined,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": undefined,
        "fontWeight": "600",
      }
    }
  >
    Test Button
  </Text>
</View>
`;

exports[`Button Component Snapshots renders secondary button correctly 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#5856D6",
      "borderColor": "transparent",
      "borderRadius": undefined,
      "borderWidth": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 24,
      "paddingVertical": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": undefined,
        "fontWeight": "600",
      }
    }
  >
    Test Button
  </Text>
</View>
`;
